--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/LeonildoAlbani/COVID-19#readme",
   "dependencies": {
     "commander": "^5.0.0",
-    "csvtojson": "^2.0.10"
+    "csvtojson": "^2.0.10",
+    "google-spreadsheet": "^3.0.10"
   }
 }
